...
        android:id="@+id/BarterMyRequestSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemRequestSave" />

    <Button
        android:id="@+id/deleteMatchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/itemRequestDelete" />

    <Button
        android:id="@+id/closeBtn"
...
