package com.example.BarterApplication;

import androidx.test.espresso.action.ViewActions;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;

import androidx.test.runner.AndroidJUnit4;

import androidx.test.ext.junit.rules.ActivityScenarioRule;

import com.example.BarterApplication.helpers.TestHelper;
import com.example.BarterApplication.helpers.ValidationHelper;
import com.google.firebase.auth.FirebaseAuth;

import org.junit.After;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertNotEquals;
import static org.junit.Assert.assertNotNull;

@RunWith(AndroidJUnit4.class)
public class LoginFunctionTest {
    @Rule
    public ActivityScenarioRule<MainActivity> activityScenarioRule = new ActivityScenarioRule<MainActivity>(MainActivity.class);
    private FirebaseAuth mAuth;



    @Before
    public void setup()
    {
        FirebaseAuth.getInstance().signOut();
        FirebaseAuth mAuth = FirebaseAuth.getInstance();
    }

    @Test
    public void testLogin_withInvalidEmail() {
        String email = "jl";
        assertFalse(ValidationHelper.isValidEmail(email));
    }

    @Test
    public void testLogin_withAccount(){
        String email = "jl548339@dal.ca";
        String pass = "123456";
        FirebaseAuth.getInstance().signOut();
        mAuth = FirebaseAuth.getInstance();

        onView(withId(R.id.editTextTextEmailAddress))
                .perform(click())
                .perform(typeText(email), ViewActions.closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword))
                .perform(click())
                .perform(typeText(pass), ViewActions.closeSoftKeyboard());
        onView(withId(R.id.buttonLogin))
                .perform(click());

        onView(isRoot()).perform(TestHelper.waitFor(5000));
        assertNotNull(mAuth.getCurrentUser());
        onView(withId(R.id.buttonLogout))
                .perform(click());
        FirebaseAuth.getInstance().signOut();
    }

    @After
    public void teardown()
    {
        FirebaseAuth.getInstance().signOut();
    }
}
